<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="top">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView" android:layout_gravity="top" android:layout_weight="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="top">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_imageView" android:layout_gravity="center_horizontal|top"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Brightness"
                    android:id="@+id/photofilteringactivity_brightnesstext" android:layout_gravity="center_horizontal"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_brightnessbar" android:max="100" android:indeterminate="false"
                    android:progress="50"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Contrast"
                    android:id="@+id/photofilteringactivity_contrasttext" android:layout_gravity="center_horizontal"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_contrastbar" android:max="100" android:indeterminate="false" android:progress="50"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Saturation"
                    android:id="@+id/photofilteringactivity_saturationtext" android:layout_gravity="center_horizontal"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_saturationbar" android:max="100" android:progress="50" android:indeterminate="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/DarkRegions"
                    android:id="@+id/photofilteringactivity_darkregionstext" android:layout_gravity="center_horizontal"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_darkregionsbar" android:max="100" android:progress="50" android:indeterminate="false"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/LightRegions"
                    android:id="@+id/photofilteringactivity_lightregionstext" android:layout_gravity="center_horizontal"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_lightregionsbar" android:max="100" android:progress="50" android:indeterminate="false"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_filterspinner" android:spinnerMode="dialog"/>
            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/photofilteringactivity_filterbar" android:max="100" android:progress="50" android:indeterminate="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>